cmake_minimum_required(VERSION 3.15)
project(algorithms_in_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithms_in_cpp main.cpp chapter10/dictionary.h chapter01/permutations.cpp chapter01/factorial.cpp chapter01/fibonacci.cpp chapter01/gcd.cpp chapter01/subsets.cpp chapter01/accumulate.cpp exception/myExceptions.h chapter05/changeLength1D.h chapter05/ArrayList.h chapter05/LinearList.h chapter05/ArrayList.cpp chapter05/Iterator.h)