cmake_minimum_required(VERSION 3.15)
project(algorithms_in_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithms_in_cpp main.cpp chapter10/dictionary.h chapter01/permutations.cpp chapter01/factorial.cpp chapter01/fibonacci.cpp chapter01/gcd.cpp chapter01/subsets.cpp chapter01/accumulate.cpp exception/myExceptions.h chapter05/changeLength1D.h chapter05/ArrayList.h chapter05/LinearList.h chapter05/ArrayList.cpp chapter05/Iterator.h chapter05/VectorList.h chapter06/Chain.h chapter06/ExtendedLinearList.h chapter06/ExtendedChain.h chapter06/CircularListWithHeader.h chapter06/ChainNode.h chapter06/StudentRecord.h chapter08/Stack.h chapter08/DerivedArrayStack.h chapter08/ArrayStack.h chapter08/LinkedStack.h chapter08/printMatchedPairs.cpp chapter08/hanoiWithStacks.cpp chapter08/hanoiRecursive.cpp chapter08/railroadWithStacks.cpp chapter08/switchBox.cpp)